--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "astro": "^4.5.12",
     "astro-font": "^0.0.72",
     "clsx": "^2.1.0",
+    "gsap": "^3.12.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.3"
   },
